# rust-cloud

./: .gitignore  AGENTS.md  Cargo.toml  Learn.md  Makefile  README.md  start.sh  todo.md
backend/: Cargo.toml
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/api/: doc.rs  mod.rs  routes.rs
backend/src/db/: mod.rs  models.rs  repository.rs
backend/src/service/: mod.rs  storage.rs  sync.rs  version.rs
backend/src/watcher/: file_watcher.rs
backend/storage/: README.md  db.json
backend/tests/: integration_test.rs
cli/: Cargo.toml
cli/src/: client.rs  config.rs  main.rs  sync.rs
cli/src/commands/: config.rs  download.rs  ls.rs  mod.rs  status.rs  sync.rs  upload.rs
kimiwrite_only/: improvements.md  review_report.md  worklog.md
web/: Learn.md  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: index.ts
web/src/components/: Breadcrumbs.tsx  DeviceRegistration.tsx  FileList.tsx  FilePreview.tsx  FileUpload.tsx  Layout.tsx  Navigation.tsx
web/src/hooks/: index.ts
web/src/pages/: DeviceManager.tsx  FileManager.tsx  SyncManager.tsx  VersionManager.tsx
web/src/types/: index.ts
web/src/utils/: index.ts
